--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,41 +1,34 @@
 version: '3.8'
 
 services:
-  backend:
+  backend-dev:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
-      - DATABASE_HOST=db
+      - NODE_ENV=development
+      - DATABASE_HOST=db-dev
       - DATABASE_PORT=5432
       - DATABASE_USERNAME=hikari_user
       - DATABASE_PASSWORD=hikari_password
       - DATABASE_NAME=hikari
-      - JWT_SECRET=production-super-secret-jwt-key-change-in-production
+      - JWT_SECRET=dev-super-secret-jwt-key
       - JWT_EXPIRATION=24h
       - PORT=3000
     depends_on:
-      db:
+      db-dev:
         condition: service_healthy
     volumes:
       - ./backend/src:/usr/src/app/src
+      - ./backend/package.json:/usr/src/app/package.json
+      - ./backend/package-lock.json:/usr/src/app/package-lock.json
+      - /usr/src/app/node_modules
     command: ["npm", "run", "start:dev"]
+    restart: unless-stopped
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3000"
-    depends_on:
-      - backend
-    environment:
-      - REACT_APP_API_URL=http://localhost:3000
-
-  db:
+  db-dev:
     image: postgres:15-alpine
     environment:
       POSTGRES_USER: hikari_user
@@ -45,7 +38,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_dev_data:/var/lib/postgresql/data
       - ./backend/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U hikari_user -d hikari"]
@@ -54,5 +47,13 @@ services:
       retries: 5
     restart: unless-stopped
 
+  adminer:
+    image: adminer:latest
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db-dev
+    restart: unless-stopped
+
 volumes:
-  postgres_data:
+  postgres_dev_data:
