feat(tests): enhance user controller and service tests with security and repository mocks

--- a/backend/package.json
+++ b/backend/package.json
@@ -90,8 +90,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "moduleNameMapping": {
+    "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/$1"
     }
   }
 }
+
