--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-# Database Configuration
+﻿# Database Configuration
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
@@ -12,3 +12,8 @@ JWT_EXPIRATION=24h
 # Application Configuration
 NODE_ENV=development
 PORT=3000
+
+# Captcha Configuration
+RECAPTCHA_ENABLED=false
+RECAPTCHA_SECRET=
+RECAPTCHA_MIN_SCORE=0.5
