--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,4 +1,4 @@
-# Test Environment Variables
+﻿# Test Environment Variables
 NODE_ENV=test
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
@@ -8,3 +8,6 @@ DATABASE_NAME=hikari_test
 JWT_SECRET=test-secret-key-for-testing
 JWT_EXPIRATION=24h
 PORT=3000
+RECAPTCHA_ENABLED=false
+RECAPTCHA_SECRET=
+RECAPTCHA_MIN_SCORE=0.5
