--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,27 +1,30 @@
-# Development Dockerfile
+# Development Dockerfile - Optimized
 FROM node:18-alpine
 
 # Install dumb-init for proper signal handling
 RUN apk add --no-cache dumb-init
 
+# Create non-root user first
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nestjs -u 1001
+
 # Set working directory
 WORKDIR /usr/src/app
 
-# Copy package files
-COPY package*.json ./
+# Change ownership of working directory
+RUN chown nestjs:nodejs /usr/src/app
+
+# Switch to non-root user
+USER nestjs
+
+# Copy package files with correct ownership
+COPY --chown=nestjs:nodejs package*.json ./
 
 # Install all dependencies (including dev)
 RUN npm ci && npm cache clean --force
 
-# Copy source code
-COPY . .
-
-# Create non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nestjs -u 1001 && \
-    chown -R nestjs:nodejs /usr/src/app
-
-USER nestjs
+# Copy source code with correct ownership
+COPY --chown=nestjs:nodejs . .
 
 # Expose port
 EXPOSE 3000
